--- a/roles/system_setup/handlers/main.yaml
+++ b/roles/system_setup/handlers/main.yaml
@@ -10,17 +10,23 @@
     state: restarted
 
 - name: Restart docker
+  become: true
+  become_user: "{{ docker_username }}"
+  environment:
+    - XDG_RUNTIME_DIR: "/run/user/{{ docker_username_uid }}"
   systemd:
     name: docker
     scope: user
     state: restarted
-  become: false
 
 - name: Reload systemd user daemon
+  become: true
+  become_user: "{{ docker_username }}"
+  environment:
+    - XDG_RUNTIME_DIR: "/run/user/{{ docker_username_uid }}"
   systemd:
     daemon_reload: true
     scope: user
-  become: false
     
 - name: Rebuild initramfs
   command:
