--- a/main.yaml
+++ b/main.yaml
@@ -7,4 +7,8 @@
     - config.yaml
 
   roles:
+    - role: storage_setup
+      when: storage_setup
+
     - role: system_setup
+      when: system_setup
