--- a/roles/storage_setup/tasks/subvolumes.yaml
+++ b/roles/storage_setup/tasks/subvolumes.yaml
@@ -19,36 +19,36 @@
 
 
 - name: Create root subvolume
-  btrfs_subvolume:
+  community.general.btrfs_subvolume:
     name: "{{ nas_mountpoint }}/@"
     filesystem_label: "{{ nas_device_label }}"
 
 - name: Create snapshots subvolume
-  btrfs_subvolume:
+  community.general.btrfs_subvolume:
     name: "{{ nas_mountpoint }}/@snapshots"
     filesystem_label: "{{ nas_device_label }}"
 
 - name: Create docker subvolume
-  btrfs_subvolume:
+  community.general.btrfs_subvolume:
     name: "{{ nas_mountpoint }}/@docker"
     filesystem_label: "{{ nas_device_label }}"
 
 - name: Create images subvolume
-  btrfs_subvolume:
+  community.general.btrfs_subvolume:
     name: "{{ nas_mountpoint }}/@images"
     filesystem_label: "{{ nas_device_label }}"
 
 - name: Create videos subvolume
-  btrfs_subvolume:
+  community.general.btrfs_subvolume:
     name: "{{ nas_mountpoint }}/@videos"
     filesystem_label: "{{ nas_device_label }}"
 
 - name: Create documents subvolume
-  btrfs_subvolume:
+  community.general.btrfs_subvolume:
     name: "{{ nas_mountpoint }}/@documents"
     filesystem_label: "{{ nas_device_label }}"
 
 - name: Create media subvolume
-  btrfs_subvolume:
+  community.general.btrfs_subvolume:
     name: "{{ nas_mountpoint }}/@media"
     filesystem_label: "{{ nas_device_label }}"
