--- a/roles/storage_setup/tasks/subvolumes.yaml
+++ b/roles/storage_setup/tasks/subvolumes.yaml
@@ -1,54 +1,42 @@
 ---
-- name: Create mountpoint
-  file:
-    path: "{{ nas_mountpoint }}"
-    state: directory
-    mode: "0770"
-    owner: "{{ nas_user }}"
-    group: "{{ nas_user }}"
-
-
-- name: Mount FS
-  mount:
-    src: "LABEL={{ nas_device_label }}"
-    path: "{{ nas_mountpoint }}"
-    fstype: btrfs
-    state: ephemeral
-  notify: 
-    - Unmount FS
-
-
 - name: Create root subvolume
   community.general.btrfs_subvolume:
-    name: "{{ nas_mountpoint }}/@"
+    name: /@
+    automount: true
     filesystem_label: "{{ nas_device_label }}"
 
 - name: Create snapshots subvolume
   community.general.btrfs_subvolume:
-    name: "{{ nas_mountpoint }}/@snapshots"
+    name: /@snapshots
+    automount: true
     filesystem_label: "{{ nas_device_label }}"
 
 - name: Create docker subvolume
   community.general.btrfs_subvolume:
-    name: "{{ nas_mountpoint }}/@docker"
+    name: /@docker
+    automount: true
     filesystem_label: "{{ nas_device_label }}"
 
 - name: Create images subvolume
   community.general.btrfs_subvolume:
-    name: "{{ nas_mountpoint }}/@images"
+    name: /@images
+    automount: true
     filesystem_label: "{{ nas_device_label }}"
 
 - name: Create videos subvolume
   community.general.btrfs_subvolume:
-    name: "{{ nas_mountpoint }}/@videos"
+    name: /@videos
+    automount: true
     filesystem_label: "{{ nas_device_label }}"
 
 - name: Create documents subvolume
   community.general.btrfs_subvolume:
-    name: "{{ nas_mountpoint }}/@documents"
+    name: /@documents
+    automount: true
     filesystem_label: "{{ nas_device_label }}"
 
 - name: Create media subvolume
   community.general.btrfs_subvolume:
-    name: "{{ nas_mountpoint }}/@media"
+    name: /@media
+    automount: true
     filesystem_label: "{{ nas_device_label }}"
