Use dict to create btrfs subvolumes

--- a/roles/storage_setup/defaults/main.yaml
+++ b/roles/storage_setup/defaults/main.yaml
@@ -9,3 +9,11 @@ nas_mountpoint: /nas
 nas_backup_mountpoint: /nas-backup
 
 nas_user: nas
+
+btrfs_subvolumes: # name: mountpoint
+  snapshots: .snapshots
+  docker: docker
+  images: images
+  videos: videos
+  documents: documents
+  media: media
