--- a/roles/storage_setup/tasks/subvolumes.yaml
+++ b/roles/storage_setup/tasks/subvolumes.yaml
@@ -1,42 +1,13 @@
 ---
-- name: Create root subvolume
+- name: Create btrfs root subvolume
   community.general.btrfs_subvolume:
     name: /@
     automount: true
     filesystem_label: "{{ nas_device_label }}"
 
-- name: Create snapshots subvolume
+- name: Create btrfs subvolumes
   community.general.btrfs_subvolume:
-    name: /@snapshots
+    name: "/@{{ item.key }}"
     automount: true
     filesystem_label: "{{ nas_device_label }}"
-
-- name: Create docker subvolume
-  community.general.btrfs_subvolume:
-    name: /@docker
-    automount: true
-    filesystem_label: "{{ nas_device_label }}"
-
-- name: Create images subvolume
-  community.general.btrfs_subvolume:
-    name: /@images
-    automount: true
-    filesystem_label: "{{ nas_device_label }}"
-
-- name: Create videos subvolume
-  community.general.btrfs_subvolume:
-    name: /@videos
-    automount: true
-    filesystem_label: "{{ nas_device_label }}"
-
-- name: Create documents subvolume
-  community.general.btrfs_subvolume:
-    name: /@documents
-    automount: true
-    filesystem_label: "{{ nas_device_label }}"
-
-- name: Create media subvolume
-  community.general.btrfs_subvolume:
-    name: /@media
-    automount: true
-    filesystem_label: "{{ nas_device_label }}"
+  loop: "{{ btrfs_subvolumes | dict2items }}"
